CombinedService test